changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -134,11 +134,9 @@
 
                     // her skal jeg ha noe
 
-                    
-                }
-
-                console.log(averageBrightness)
-
+                    console.log(averageBrightness)
+                    console.log(grid[i][j]);
+/*
                     for (let i = 0; i < 7; i++) {
                         for (let j = 0; j < 9; j++) {
                             let content = grid[i][j];
@@ -164,7 +162,8 @@
                             let content = grid[i][j];
                             activeCellA0 += content;
                             }
-                        } 
+                        }  */
+                }
             }
             requestAnimationFrame(() => drawFrame(context, videoWidth, videoHeight));
         };
