changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -121,7 +121,7 @@
 
                     console.log(averageBrightness)
 
-                    console.log(pixelGrid[y][x]);
+                    console.log(grid[y][x]);
 
                     
 
