changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -121,7 +121,7 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-                    console.log(averageBrightness)
+                  //  console.log(averageBrightness)
 
                     lysVerdi = averageBrightness;
 
