changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -542,7 +542,7 @@
         function updateGrid() {
             let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
             let activeCellCount = 0;
-            console.log(lysVerdi);
+          //  console.log(lysVerdi);
 ////
             calculateValueAsync().then(result => {
             console.log(result); // vil logge 42
