changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -127,7 +127,7 @@
 
                     // lyssynth
 
-                    lysSynth.triggerAttackRelease(averageBrightness, '16n', undefined, gain);
+                    lysSynth.triggerAttackRelease(averageBrightness);
                     
 
                     
