changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -216,7 +216,7 @@
 
         }).connect(gainNode2);
 
-        const lysSynth = new Tone.MonoSynth().connect(gainNode2);
+        const lysSynth = new Tone.MonoSynth().connect(gainNode);
 
         //first set of drone notes
         let droneNote = 'A2';
