changing tonality function

--- a/lys.html
+++ b/lys.html
@@ -83,7 +83,7 @@
         const threshold = 100;
         const threshold2 = 101;
         let lysNote;
-        const averageBrightness = 0;
+        var averageBrightness = 0;
         
 
         let pixelGrid = [];
