--- a/lys.html
+++ b/lys.html
@@ -83,7 +83,7 @@
         const threshold = 100;
         const threshold2 = 101;
         let lysNote;
-        let lysSynth = new Tone.MonoSynth().toDestination();
+        var lysSynth = new Tone.MonoSynth().toDestination();
         var averageBrightness = 0;
         
 
