changing tonality function

--- a/son4.html
+++ b/son4.html
@@ -113,7 +113,7 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-                    console.log(averageBrightness)
+                    //console.log(averageBrightness)
 
                     if ((averageBrightness > threshold) && (averageBrightness < threshold2)){
                         if (!pixelGrid[y][x]) {
