changing tonality function

--- a/son4.html
+++ b/son4.html
@@ -408,7 +408,7 @@
             let interval = 500; 
             key1pressed = false;
             clearInterval(timerId);
-            timerId = setInterval(updateGrid, interval), playNote;
+            timerId = setInterval(updateGrid, interval, playNote) ;
             }
         });
 
