--- a/son4.html
+++ b/son4.html
@@ -399,7 +399,7 @@
             let interval = 1000; 
             key1pressed = true;
             clearInterval(timerId);
-            timerId = setInterval(updateGrid, interval, playNote);
+            timerId = setInterval(updateGrid, interval);
             }
         });
 
@@ -408,7 +408,7 @@
             let interval = 500; 
             key1pressed = false;
             clearInterval(timerId);
-            timerId = setInterval(updateGrid, interval, playNote) ;
+            timerId = setInterval(updateGrid, interval) ;
             }
         });
 
@@ -534,14 +534,18 @@
             
         }
 
-        function playNote(i, j, timerId) {
+        function playNote(i, j) {
             let synth;
             if (availableSynths.length > 0) {
                 synth = availableSynths.pop();
             } else {
-                if (interval < 1000) {
-                synth = new Tone.Synth().connect(gainNode);
-                } else {
+
+                document.addEventListener('keydown', (event) => {
+                if (event.key.toLowerCase() === '1') {
+                    synth = new Tone.Synth().connect(gainNode); 
+                }
+            
+                else {
                     synth = new Tone.AMSynth({
 
                                 envelope : {
@@ -553,7 +557,8 @@
                                 }).connect(gainNode);
 
                     }
-                    console.log(interval);
+
+                });
                 }
 
             const noteIndex = (i) % currentScale.length;
