changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -751,7 +751,7 @@
             }
           }
         }
-    
+    /*
         // Clear the canvas and draw the control point
         canvasContext.clearRect(0, 0, canvas.width, canvas.height);
         canvasContext.drawImage(videoElement, 0, 0, canvasWidth, canvasHeight); // Redraw video
@@ -764,7 +764,7 @@
         canvasContext.fillStyle = '#fff';
         canvasContext.font = '16px Arial';
         canvasContext.fillText(`Osc 1: ${freq1.toFixed(2)} Hz`, 10, 20);
-        canvasContext.fillText(`Osc 2: ${freq2.toFixed(2)} Hz`, 10, 40);
+        canvasContext.fillText(`Osc 2: ${freq2.toFixed(2)} Hz`, 10, 40); */
     
         // Update last center position
         lastCenterX = centerX;
