changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -657,8 +657,8 @@
     // Canvas setup for visualization
     const canvas = document.getElementById('pixel-grid');
     const canvasContext = canvas.getContext('2d');
-    canvas.width = canvas.offsetWidth;
-    canvas.height = canvas.offsetHeight;
+    //canvas.width = canvas.offsetWidth;
+    //canvas.height = canvas.offsetHeight;
 
     
     // To store the previous frame and position
