--- a/soncircle.html
+++ b/soncircle.html
@@ -125,7 +125,7 @@
                     }
                 }
             }
-            requestAnimationFrame(() => drawFrame(context, videoWidth, videoHeight));
+            //requestAnimationFrame(() => drawFrame(context, videoWidth, videoHeight));
         };
 
         const videoElement = document.createElement('video');
@@ -673,7 +673,7 @@
       
       // Draw video frame onto the canvas
 
-      const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
+     // const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
     //canvasContext.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
 
      // bytter video med videoElement som vi har fra før. Beholder canvasContext
@@ -762,7 +762,7 @@
     // Continuously process video frames
     function update() {
       findDarkCircle();
-      requestAnimationFrame(update);
+      //requestAnimationFrame(update);
     }
     
     update();
