changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -762,7 +762,7 @@
     // Continuously process video frames
     function update() {
       findDarkCircle();
-    //  requestAnimationFrame(update);
+      requestAnimationFrame(update);
     }
     
     update();
