changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -668,8 +668,8 @@
     
     // Function to find the dark object in the video frame
     function findDarkCircle() {
-      const canvasWidth = canvas.width;
-      const canvasHeight = canvas.height;
+      const canvasWidth = 640;
+      const canvasHeight = 2000;
       
       // Draw video frame onto the canvas
 
