--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(2, 107, 245);
+            background-color: rgb(196, 2, 245);
         }
         #video-container {
             position: relative;
@@ -655,11 +655,11 @@
     }
     
     // Canvas setup for visualization
-    const canvas = document.getElementById('pixel-grid');
-    const canvasContext = canvas.getContext('2d');
+  //  const canvas = document.getElementById('pixel-grid');
+    const canvasContext = pixelGridCanvas.getContext('2d');
     //canvas.width = canvas.offsetWidth;
     //canvas.height = canvas.offsetHeight;
- pixelGridCanvas
+ // pixelGridCanvas
     
     // To store the previous frame and position
     let previousFrame = null;
