changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -670,6 +670,7 @@
     function findDarkCircle() {
       const canvasWidth = canvas.width;
       const canvasHeight = canvas.height;
+      console.log("canvas width and height: ", canvas.width, canvas.height);
       
       // Draw video frame onto the canvas
 
