--- a/soncircle.html
+++ b/soncircle.html
@@ -659,8 +659,8 @@
     const canvasContext = canvas.getContext('2d');
     //canvas.width = canvas.offsetWidth;
     //canvas.height = canvas.offsetHeight;
-    const canvasWidth =  480;//canvas.width;
-    const canvasHeight = 640; // canvas.height;
+   // const canvasWidth =  480;//canvas.width;
+  //  const canvasHeight = 640; // canvas.height;
 
     
     // To store the previous frame and position
