--- a/soncircle.html
+++ b/soncircle.html
@@ -657,10 +657,11 @@
     // Canvas setup for visualization
     const canvas = document.getElementById('pixel-grid');
     const canvasContext = canvas.getContext('2d');
+    console.log("pixel-grid: ", pixel-grid.width, pixel-grid.height);
     //canvas.width = canvas.offsetWidth;
     //canvas.height = canvas.offsetHeight;
-   // const canvasWidth =  480;//canvas.width;
-  //  const canvasHeight = 640; // canvas.height;
+    const canvasWidth =  480;//canvas.width;
+    const canvasHeight = 640; // canvas.height;
 
     
     // To store the previous frame and position
