changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(245, 111, 2);
+            background-color: rgb(200, 245, 2);
         }
         #video-container {
             position: relative;
@@ -655,9 +655,9 @@
     }
     
     // Canvas setup for visualization
-    const canvas = document.getElementById('pixel-grid');
+    const canvas = document.getElementById('canvas');
     const canvasContext = canvas.getContext('2d');
-    console.log("pixel-grid: ", pixel-grid.width, pixel-grid.height);
+    console.log("canvas: ", canvas.width, canvas.height);
     //canvas.width = canvas.offsetWidth;
     //canvas.height = canvas.offsetHeight;
     const canvasWidth =  480;//canvas.width;
