changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -672,7 +672,8 @@
     // Function to find the dark object in the video frame
     function findDarkCircle() {
 
-      console.log("canvas width and height: ", canvas.width, canvas.height);
+        
+      console.log("canvas width and height: ", videoElement.videoWidth, videoElement.videoHeight);
       
       // Draw video frame onto the canvas
 
