changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -142,6 +142,7 @@
 
                     pixelGridCanvas.width = videoWidth;
                     pixelGridCanvas.height = videoHeight;
+                    console.log("pixelGridCanvas width and height: ", videoWidth, videoHeight)
 
                     initPixelGrid();
                     drawFrame(context, videoWidth, videoHeight);
