--- a/soncircle2.html
+++ b/soncircle2.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(245, 221, 2);
+            background-color: rgb(79, 245, 2);
         }
         #video-container {
             position: relative;
@@ -56,6 +56,23 @@
             background-color: rgb(20, 2, 3);
             border-radius: 50px;
         }
+
+
+video, canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
+  pointer-events: none; /* Gjør lerretet klikkbart slik at det ikke blokkerer */
+}
+
+p {
+  margin-top: 20px;
+}
     </style>
 </head>
 <body>
