changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -656,7 +656,7 @@
     }
     
     // Canvas setup for visualization
-    const canvas = document.getElementById('canvas');
+    const canvas = document.getElementById('pixel-grid');
     const canvasContext = canvas.getContext('2d');
     console.log("canvas: ", canvas.width, canvas.height);
     //canvas.width = canvas.offsetWidth;
