changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -163,6 +163,7 @@
 // bytter frame med canvasContext med context
 const frame = context.getImageData(0, 0, videoWidth, videoHeight);
 const length = frame.data.length;
+(console.log("length " length))
 
 let totalX = 0, totalY = 0, count = 0;
 
