changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(200, 245, 2);
+            background-color: rgb(245, 99, 2);
         }
         #video-container {
             position: relative;
@@ -29,6 +29,7 @@
             grid-template-rows: repeat(15, 32px);
             width: 640px;
             height: 480px;
+            object-fit: cover;
         }
         .pixel {
             width: 32px;
