--- a/soncircle2.html
+++ b/soncircle2.html
@@ -79,7 +79,7 @@
     <div id="video-container">
         <canvas id="pixel-grid"></canvas>
         <canvas id="canvas" width="640" height="640"></canvas>
-        <video id="video" autoplay></video>
+        <video id="video" width="640" height="640" autoplay></video>
         <canvas id="controlCanvas"></canvas>
         <div id="grid"></div>
     </div>
