changing tonality function

--- a/soncircle2.html
+++ b/soncircle2.html
@@ -347,7 +347,7 @@ update();
         let availableSynths = []
         let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
         // first set of pentatonic scales
-        let pentatonicScale = ['A2', ["E4", "D4", "E4"], 'C3', '0', '0', 'D3', 'E3', 'G3', '0', '0', '0', 'A3', 'C4', '0', 'D4', 'E4', 'G4', 'A4', '0', 'C5', 'D5', 'E5', 'G5'];
+        let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5'];
         let pentatonicScale2 = ['B2', 'D3', 'E3', 'F#3', 'A3', 'B3', 'D4', 'E4', 'F#4', 'A4', 'B4', 'D5', 'E5', 'F#5', 'A5'];
        
         // second set of pentatonic scales
