--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(2, 168, 245);
+            background-color: rgb(245, 140, 2);
         }
         #video-container {
             position: relative;
@@ -31,6 +31,16 @@
             height: 480px;
             object-fit: cover;
         }
+
+        video, canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Legger til dette for å bevare forholdet */
+            }
+            
         .pixel {
             width: 32px;
             height: 32px;
