changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -40,7 +40,7 @@
             height: 100%;
             object-fit: cover; /* Legger til dette for å bevare forholdet */
             }
-            
+
         .pixel {
             width: 32px;
             height: 32px;
@@ -72,6 +72,7 @@
 <body>
     <div id="video-container">
         <canvas id="pixel-grid"></canvas>
+        <video id="video" autoplay></video>
         <canvas id="canvas" width="640" height="480"></canvas>
         <div id="grid"></div>
     </div>
