--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(245, 51, 2);
+            background-color: rgb(245, 111, 2);
         }
         #video-container {
             position: relative;
@@ -36,8 +36,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 640px;
+            height: 480px;
             object-fit: cover; /* Legger til dette for å bevare forholdet */
             }
 
