changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(87, 2, 245);
+            background-color: rgb(2, 245, 164);
         }
         #video-container {
             position: relative;
@@ -30,6 +30,7 @@
             width: 640px;
             height: 480px;
             object-fit: cover;
+            display: none;
         }
 
         video, canvas {
