changing tonality function

--- a/soncircle.html
+++ b/soncircle.html
@@ -36,7 +36,7 @@
         video, canvas {
             position: absolute;
             top: 0;
-            left: 50;
+            left: 50px;
             width: 640px;
             height: 480px;
             object-fit: cover; /* Legger til dette for å bevare forholdet */
